stuck at function statment requires a name for the show all users button , and fixing the search call to parse the strings to numbers

--- a/index.css
+++ b/index.css
@@ -205,15 +205,13 @@ ins {
 
 nav {
     background: #1d5660 ;
-    padding: 10px ;
+    padding-right: 40px ;
+    padding-top: 5px ;
+    padding-bottom:  5px ;
     box-shadow: 3px 3px 15px 5px ;
     border-bottom-right-radius: 15px ;
     border-top-right-radius: 15px ;
     position: fixed;
     top: 10px;
     z-index: 999;
-}
-
-#userName {
-     vertical-align:text-bottom;
 }
